# proxi-microbit

./: .gitignore  CLAUDE.md  README.md  controller_mapping.py  serial_monitor.py  start_dashboard.sh
docs/bootloader/: daplink-bootloader.md  pyocd-flashing.md
docs/debugging/: debug-setup.md
docs/hardware/: kosmos-proxi.md  microbit-v2-hardware.md  xbox-controller-ble-hid.md
docs/software/: codal-sdk.md  freertos-option.md  zephyr-rtos.md
docs/tools/: grepai-usage.md
imu_orientation/firmware/: CMakeLists.txt  bt.conf  build_flash.sh  prj.conf  sysbuild.conf
imu_orientation/firmware/boards/: bbc_microbit_v2.overlay
imu_orientation/firmware/bootloader/: CMakeLists.txt  prj.conf
imu_orientation/firmware/bootloader/boards/: bbc_microbit_v2.overlay
imu_orientation/firmware/bootloader/src/: main.c
imu_orientation/firmware/src/: audio.c  audio.h  autonomous_nav.c  autonomous_nav.h  ble_central.c  ble_central.h  ble_output.c  ble_output.h  boot_control.c  boot_control.h  hid_parser.c  hid_parser.h  ir_sensors.c  ir_sensors.h  mahony_filter.c  mahony_filter.h  main.c  motor_driver.c  motor_driver.h  motor_test.c  motor_test.h  orientation.c  orientation.h  ota_update.c  ota_update.h  robot_state.c  robot_state.h  sensors.c  sensors.h  serial_output.c  serial_output.h  smp_bt.c  smp_bt.h  sysid.c  sysid.h  telemetry.c  telemetry.h  version.h  yaw_controller.c  yaw_controller.h
imu_orientation/firmware/sysbuild/: mcuboot.conf
imu_orientation/firmware/tools/: imu_plot.py  ir_plot.py
imu_orientation/visualizer/: cube_renderer.py  requirements.txt  serial_reader.py  visualizer.py
tools/: analyze_telemetry.py  heading_simulation.py  ota_upload.py  requirements.txt  telemetry_receiver.py
tools/telemetry_gui/: __init__.py  ble_bridge.py  dashboard.py
tools/telemetry_gui/widgets/: __init__.py  compass.py  heading_graph.py  ir_sensors.py  log_analysis.py  motor_output.py  orientation.py  pid_tuning.py  status_panel.py  thread_stats.py  variance_display.py  yaw_rate.py
